tests/snapshots/run_wpt_conformance__onnx_gatherElements_float32_3D_input_and_int32_negative_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gatherElements.https.any.js",
    "gatherElements float32 3D input and int32 negative indices",
    "onnx",
    "PASS",
)
