tests/snapshots/run_wpt_conformance__onnx_gatherND_float16_4D_input_and_1D_int64_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gatherND.https.any.js",
    "gatherND float16 4D input and 1D int64 indices",
    "onnx",
    "PASS",
)
